k8s-evreka/es.9200/es-statefulset.yaml
# Elasticsearch deployment itself
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch-dcr
  namespace: evreka
  labels:
    k8s-app: elasticsearch-dcr
    version: 5.6.5-alpine
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  serviceName: elasticsearch-dcr
  replicas: 1
  selector:
    matchLabels:
      k8s-app: elasticsearch-dcr
      version: 5.6.5-alpine
  template:
    metadata:
      labels:
        k8s-app: elasticsearch-dcr
        version: 5.6.5-alpine
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccountName: elasticsearch-dcr
      imagePullSecrets:
      - name: harbor
      containers:
      - image: 10.151.17.110/edbys/elasticsearch:5.6.5-alpine
        name: elasticsearch-dcr
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 9200
          name: es-http
        - containerPort: 9300
          name: es-transport
      volumes:
        - name: elasticsearch-yml
          configMap:
            name: es-config
            items:
                - key: elasticsearch.yml
                  path: elasticsearch.yml
  volumeClaimTemplates:
  - metadata:
      name: es-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 20Gi
