k8s-evreka/es.9200/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-logging
  namespace: evreka
  labels:
    k8s-app: kibana-logging
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: kibana-logging
  template:
    metadata:
      labels:
        k8s-app: kibana-logging
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: 'docker/default'
    spec:
      containers:
      - name: kibana-logging
        # image: 10.151.17.110/general/logging/kibana-logtrail-oss:6.3.2
        image: docker.elastic.co/kibana/kibana:5.6.12
        # original is docker.elastic.co/kibana/kibana-oss:6.3.2 
        # harbor image is 10.151.17.110/general/logging/kibana-logtrail-oss:6.3.2
        # dockerhub image is basdemirs/kibana-logtrail-oss:6.3.2
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
