k8s-evreka/es.9200/es-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: evreka
  labels:
    k8s-app: elasticsearch-dcr
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    kubernetes.io/name: "Elasticsearch"
spec:
  ports:
  - port: 9200
    protocol: TCP
    targetPort: es-http
  selector:
    k8s-app: elasticsearch-dcr
