k8s-evreka/es.9200/logstash-application.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: logserver
  namespace: evreka
spec:
  template:
    metadata:
      labels:
        app: logserver
    spec:
      containers:
      - image: docker.elastic.co/logstash/logstash:5.5.0
        name: logserver
        ports:
        - name: logstash
          containerPort: 5044
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/share/logstash/config/logstash.yml
          subPath: logstash.yml
          readOnly: true
        - name: pipeline
          mountPath: /usr/share/logstash/pipeline
          readOnly: true
        - name: tz-config
          mountPath: /etc/localtime
        args:
        - -f
        - /usr/share/logstash/pipeline/logstash.conf
        resources:
          limits:
            memory: 2Gi
            cpu: "200m"
          requests:
            memory: 2Gi
            cpu: "200m"
      volumes:
      - name: pipeline
        configMap:
          name: logserver
          items:
          - key: logstash.conf
            path: logstash.conf
      - name: config
        configMap:
          name: logserver
          items:
          - key: logstash.yml
            path: logstash.yml
      - name: tz-config
        hostPath:
          path: /etc/localtime

---
apiVersion: v1
kind: Service
metadata:
  name: logserver
  namespace: evreka
  labels:
    app: logserver
spec:
  type: NodePort
  selector:
    app: logserver
  ports:
  - name: logstash
    port: 5044
    targetPort: 5044
    protocol: TCP
